fix: resolve TinyMCE failure callback error and improve Supabase configuration
- Fix 'failure is not a function' error in TinyMCE images_upload_handler
- Add proper error handling for undefined failure callback
- Add configureSupabase() function for easier Supabase key management
- Add configuration button in admin interface
- Update Supabase URL to correct project URL
- Improve error messages and fallback handling for image uploads

--- a/admin-login.html
+++ b/admin-login.html
@@ -333,7 +333,7 @@
       e.preventDefault();
 
       const password = document.getElementById('password').value;
-      const supabaseUrl = 'https://rvzxmqmyosszlqvfqphf.supabase.co'; // Fixed URL
+      const supabaseUrl = 'https://fiaxrsiycswrwucthian.supabase.co'; // Fixed URL
       const supabaseKey = document.getElementById('supabaseKey').value;
       const rememberConfig = document.getElementById('rememberConfig').checked;
 
