deteled file temperate

--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -45,10 +45,8 @@
   <meta property="og:title" content="Tin tức - Bảo Việt Đà Nẵng">
   <meta property="og:description"
     content="Cập nhật tin tức mới nhất về bảo hiểm, sản phẩm dịch vụ và hoạt động của Bảo Việt Đà Nẵng. Thông tin hữu ích cho khách hàng.">
-  <meta property="og:image"
-    content="https://baohiembaovietdanang.vn/assets/logo.png">
-  <meta property="og:url"
-    content="https://baohiembaovietdanang.vn/tin-tuc.html">
+  <meta property="og:image" content="https://baohiembaovietdanang.vn/assets/logo.png">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/tin-tuc.html">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 </head>
@@ -131,60 +129,6 @@
 
     <div style="max-width: 900px; margin: auto; margin-top: 20px;">
       <div class="news-list" style="display: flex; flex-direction: column; gap: 20px;">
-        <!-- News Card: Ưu đãi thiết thực, mở rộng mạng lưới bảo vệ -->
-        <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
-          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
-            src="assets/tin-tuc/uu-dai-thiet-thuc-mo-rong-mang-luoi-bao-ve/image1.jpg" alt="Ưu đãi thiết thực, mở rộng mạng lưới bảo vệ" />
-          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Ưu đãi thiết thực, mở rộng mạng lưới bảo vệ</h3>
-          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Ưu đãi thiết thực, mở rộng mạng lưới bảo vệ</p>
-          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
-            <span
-              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">TIN TỨC</span>
-            <span style="color: #999; font-size: 14px;">01/11/2025</span>
-          </div>
-          <a href="./uu-dai-thiet-thuc-mo-rong-mang-luoi-bao-ve.html"
-            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
-            Xem chi tiết
-            <span style="font-size: 16px;">→</span>
-          </a>
-        </div>
-        <!-- News Card: Test Lưu Nháp -->
-        <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
-          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
-            src="assets/tin-tuc/test-luu-nhap/image2.jpg" alt="Test Lưu Nháp" />
-          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Test Lưu Nháp</h3>
-          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Luu nhap</p>
-          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
-            <span
-              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">TIN TỨC</span>
-            <span style="color: #999; font-size: 14px;">01/11/2025</span>
-          </div>
-          <a href="./test-luu-nhap.html"
-            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
-            Xem chi tiết
-            <span style="font-size: 16px;">→</span>
-          </a>
-        </div>
-        <!-- News Card: 12 Ước tính 119 tỷ đồng bồi thường khẩn cấp, Bảo hiểm Bảo Việt đồng hành cùng người dân vùng thiên tai -->
-        <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
-          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
-            src="assets/tin-tuc/12-uoc-tinh-119-ty-dong-boi-thuong-khan-cap-bao-hiem-bao-viet-dong-hanh-cung-nguoi-dan-vung-thien-tai/image3.jpg" alt="12 Ước tính 119 tỷ đồng bồi thường khẩn cấp, Bảo hiểm Bảo Việt đồng hành cùng người dân vùng thiên tai" />
-          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">12 Ước tính 119 tỷ đồng bồi thường khẩn cấp, Bảo hiểm Bảo Việt đồng hành cùng người dân vùng thiên tai</h3>
-          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Ước tính 119 tỷ đồng bồi thường khẩn cấp, Bảo hiểm Bảo Việt đồng hành cùng người dân vùng thiên tai</p>
-          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
-            <span
-              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">TIN TỨC</span>
-            <span style="color: #999; font-size: 14px;">01/11/2025</span>
-          </div>
-          <a href="./12-uoc-tinh-119-ty-dong-boi-thuong-khan-cap-bao-hiem-bao-viet-dong-hanh-cung-nguoi-dan-vung-thien-tai.html"
-            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
-            Xem chi tiết
-            <span style="font-size: 16px;">→</span>
-          </a>
-        </div>
       </div>
     </div>
   </div>
