--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -436,6 +436,155 @@
       opacity: 0.9;
       font-size: 1rem;
     }
+
+    /* Pagination Styles */
+    .pagination-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 2rem;
+      padding: 1rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .pagination-info {
+      color: #718096;
+      font-size: 0.9rem;
+      font-weight: 500;
+    }
+
+    .pagination-controls {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+    }
+
+    .pagination-btn {
+      padding: 0.5rem 1rem;
+      border: 1px solid #e2e8f0;
+      background: white;
+      color: #4a5568;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.875rem;
+      font-weight: 500;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
+    }
+
+    .pagination-btn:hover:not(:disabled) {
+      background: #f7fafc;
+      border-color: #cbd5e0;
+      transform: translateY(-1px);
+    }
+
+    .pagination-btn:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      background: #f7fafc;
+    }
+
+    .page-numbers {
+      display: flex;
+      gap: 0.25rem;
+      margin: 0 0.5rem;
+    }
+
+    .page-number {
+      padding: 0.5rem 0.75rem;
+      border: 1px solid #e2e8f0;
+      background: white;
+      color: #4a5568;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.875rem;
+      font-weight: 500;
+      transition: all 0.2s;
+      min-width: 40px;
+      text-align: center;
+    }
+
+    .page-number:hover {
+      background: #f7fafc;
+      border-color: #cbd5e0;
+    }
+
+    .page-number.active {
+      background: #0060ae;
+      color: white;
+      border-color: #0060ae;
+    }
+
+    .page-number.ellipsis {
+      cursor: default;
+      background: transparent;
+      border: none;
+      color: #a0aec0;
+    }
+
+    .page-number.ellipsis:hover {
+      background: transparent;
+      border: none;
+    }
+
+    .page-size-selector {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      color: #718096;
+      font-size: 0.9rem;
+    }
+
+    .page-size-selector select {
+      padding: 0.375rem 0.5rem;
+      border: 1px solid #e2e8f0;
+      border-radius: 4px;
+      background: white;
+      color: #4a5568;
+      font-size: 0.875rem;
+      cursor: pointer;
+      transition: border-color 0.2s;
+    }
+
+    .page-size-selector select:focus {
+      outline: none;
+      border-color: #0060ae;
+      box-shadow: 0 0 0 3px rgba(0, 96, 174, 0.1);
+    }
+
+    /* Responsive pagination */
+    @media (max-width: 768px) {
+      .pagination-container {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 1rem;
+      }
+
+      .pagination-controls {
+        justify-content: center;
+      }
+
+      .pagination-info,
+      .page-size-selector {
+        text-align: center;
+      }
+
+      .page-numbers {
+        justify-content: center;
+      }
+
+      .pagination-btn {
+        font-size: 0.8rem;
+        padding: 0.4rem 0.8rem;
+      }
+    }
   </style>
 </head>
 
@@ -545,6 +694,42 @@
         </div>
 
         <div id="articlesTable"></div>
+
+        <!-- Pagination Controls -->
+        <div id="articlesPagination" class="pagination-container" style="display: none;">
+          <div class="pagination-info">
+            <span id="articlesPageInfo">Hiển thị 1-10 của 50 bài viết</span>
+          </div>
+          <div class="pagination-controls">
+            <button id="articlesFirstPage" class="pagination-btn" onclick="goToArticlesPage(1)">
+              ⏮️ Đầu
+            </button>
+            <button id="articlesPrevPage" class="pagination-btn"
+              onclick="goToArticlesPage(Math.max(1, currentArticlesPage - 1))">
+              ⬅️ Trước
+            </button>
+            <div id="articlesPageNumbers" class="page-numbers">
+              <!-- Page numbers will be generated here -->
+            </div>
+            <button id="articlesNextPage" class="pagination-btn"
+              onclick="goToArticlesPage(Math.min(totalArticlesPages || 1, currentArticlesPage + 1))">
+              Sau ➡️
+            </button>
+            <button id="articlesLastPage" class="pagination-btn" onclick="goToArticlesPage(totalArticlesPages || 1)">
+              Cuối ⏭️
+            </button>
+          </div>
+          <div class="page-size-selector">
+            <label for="articlesPageSize">Hiển thị:</label>
+            <select id="articlesPageSize" onchange="changeArticlesPageSize(this.value)">
+              <option value="10">10</option>
+              <option value="20">20</option>
+              <option value="50">50</option>
+              <option value="100">100</option>
+            </select>
+            <span>bài viết/trang</span>
+          </div>
+        </div>
       </section>
 
       <!-- Users Section -->
@@ -590,6 +775,12 @@
     // Initialize variables
     let supabase = null;
     let currentSection = 'overview';
+
+    // Pagination variables for articles
+    let currentArticlesPage = 1;
+    let articlesPerPage = 10;
+    let totalArticles = 0;
+    let totalArticlesPages = 0;
 
     // Initialize app
     window.addEventListener('DOMContentLoaded', function () {
@@ -653,7 +844,8 @@
 
       // Load section data
       if (section === 'articles') {
-        loadArticles();
+        currentArticlesPage = 1; // Reset to first page when switching to articles
+        loadArticles(1);
       } else if (section === 'users') {
         loadUsers();
       } else if (section === 'overview') {
@@ -696,7 +888,7 @@
     }
 
     // Articles management
-    async function loadArticles() {
+    async function loadArticles(page = 1) {
       if (!supabase) {
         showStatus('Chưa kết nối Supabase', 'error');
         return;
@@ -704,24 +896,44 @@
 
       const loading = document.getElementById('articlesLoading');
       const table = document.getElementById('articlesTable');
+      const paginationContainer = document.getElementById('articlesPagination');
 
       loading.style.display = 'block';
       table.innerHTML = '';
+      paginationContainer.style.display = 'none';
 
       try {
+        // First, get total count
+        const { count, error: countError } = await supabase
+          .from('articles')
+          .select('*', { count: 'exact', head: true });
+
+        if (countError) throw countError;
+
+        totalArticles = count || 0;
+        totalArticlesPages = Math.ceil(totalArticles / articlesPerPage);
+        currentArticlesPage = page;
+
+        if (totalArticles === 0) {
+          loading.style.display = 'none';
+          table.innerHTML = '<p style="text-align: center; padding: 2rem; color: #718096;">Chưa có bài viết nào</p>';
+          return;
+        }
+
+        // Get articles for current page
+        const from = (page - 1) * articlesPerPage;
+        const to = from + articlesPerPage - 1;
+
         const { data, error } = await supabase
           .from('articles')
           .select('*')
-          .order('created_at', { ascending: false });
+          .order('created_at', { ascending: false })
+          .range(from, to);
 
         if (error) throw error;
 
         loading.style.display = 'none';
-
-        if (data.length === 0) {
-          table.innerHTML = '<p style="text-align: center; padding: 2rem; color: #718096;">Chưa có bài viết nào</p>';
-          return;
-        }
+        paginationContainer.style.display = 'flex';
 
         let tableHTML = `
           <table class="data-table">
@@ -764,15 +976,19 @@
         tableHTML += '</tbody></table>';
         table.innerHTML = tableHTML;
 
+        // Update pagination controls
+        updateArticlesPagination();
+
       } catch (error) {
         loading.style.display = 'none';
+        paginationContainer.style.display = 'none';
         console.error('Error loading articles:', error);
         showStatus('Lỗi tải danh sách bài viết: ' + error.message, 'error');
       }
     }
 
     function refreshArticles() {
-      loadArticles();
+      loadArticles(currentArticlesPage);
     }
 
     function editArticle(articleId) {
@@ -783,6 +999,85 @@
     async function deleteArticle(articleId, title) {
       // Show "feature not ready" modal instead of allowing deletion
       await showFeatureNotReadyModal();
+    }
+
+    // Articles Pagination Functions
+    function updateArticlesPagination() {
+      const pageInfoElement = document.getElementById('articlesPageInfo');
+      const pageNumbersElement = document.getElementById('articlesPageNumbers');
+      const firstPageBtn = document.getElementById('articlesFirstPage');
+      const prevPageBtn = document.getElementById('articlesPrevPage');
+      const nextPageBtn = document.getElementById('articlesNextPage');
+      const lastPageBtn = document.getElementById('articlesLastPage');
+      const pageSizeSelect = document.getElementById('articlesPageSize');
+
+      // Update page info
+      const startItem = (currentArticlesPage - 1) * articlesPerPage + 1;
+      const endItem = Math.min(currentArticlesPage * articlesPerPage, totalArticles);
+      pageInfoElement.textContent = `Hiển thị ${startItem}-${endItem} của ${totalArticles} bài viết`;
+
+      // Update page size selector
+      pageSizeSelect.value = articlesPerPage;
+
+      // Update button states
+      firstPageBtn.disabled = currentArticlesPage === 1;
+      prevPageBtn.disabled = currentArticlesPage === 1;
+      nextPageBtn.disabled = currentArticlesPage === totalArticlesPages;
+      lastPageBtn.disabled = currentArticlesPage === totalArticlesPages;
+
+      // Generate page numbers
+      generateArticlesPageNumbers();
+    }
+
+    function generateArticlesPageNumbers() {
+      const pageNumbersElement = document.getElementById('articlesPageNumbers');
+      let pageNumbersHTML = '';
+
+      const maxVisiblePages = 5;
+      let startPage = Math.max(1, currentArticlesPage - Math.floor(maxVisiblePages / 2));
+      let endPage = Math.min(totalArticlesPages, startPage + maxVisiblePages - 1);
+
+      // Adjust start page if we're near the end
+      if (endPage - startPage < maxVisiblePages - 1) {
+        startPage = Math.max(1, endPage - maxVisiblePages + 1);
+      }
+
+      // Add first page and ellipsis if needed
+      if (startPage > 1) {
+        pageNumbersHTML += `<button class="page-number" onclick="goToArticlesPage(1)">1</button>`;
+        if (startPage > 2) {
+          pageNumbersHTML += `<span class="page-number ellipsis">...</span>`;
+        }
+      }
+
+      // Add visible page numbers
+      for (let i = startPage; i <= endPage; i++) {
+        const isActive = i === currentArticlesPage ? 'active' : '';
+        pageNumbersHTML += `<button class="page-number ${isActive}" onclick="goToArticlesPage(${i})">${i}</button>`;
+      }
+
+      // Add ellipsis and last page if needed
+      if (endPage < totalArticlesPages) {
+        if (endPage < totalArticlesPages - 1) {
+          pageNumbersHTML += `<span class="page-number ellipsis">...</span>`;
+        }
+        pageNumbersHTML += `<button class="page-number" onclick="goToArticlesPage(${totalArticlesPages})">${totalArticlesPages}</button>`;
+      }
+
+      pageNumbersElement.innerHTML = pageNumbersHTML;
+    }
+
+    function goToArticlesPage(page) {
+      if (page < 1 || page > totalArticlesPages || page === currentArticlesPage) {
+        return;
+      }
+      loadArticles(page);
+    }
+
+    function changeArticlesPageSize(newSize) {
+      articlesPerPage = parseInt(newSize);
+      currentArticlesPage = 1; // Reset to first page
+      loadArticles(1);
     }
 
     // Feature not ready modal
