--- a/dang-ky-tu-van-bao-hiem.html
+++ b/dang-ky-tu-van-bao-hiem.html
@@ -365,6 +365,9 @@
   <!-- Supabase Browser SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
 
+  <!-- Supabase Key Manager -->
+  <script src="supabase-key-manager.js"></script>
+
   <script>
     function toggleMenu() {
       document.getElementById('menu').classList.toggle('active');
@@ -399,20 +402,35 @@
           });
         }
 
-        // Get configuration from localStorage if available
-        const storedUrl = localStorage.getItem('supabase_url');
+        // Try Key Manager first
+        try {
+          if (window.SupabaseKeyManager) {
+            const keyManager = new SupabaseKeyManager({
+              baseUrl: 'https://fiaxrsiycswrwucthian.supabase.co',
+              cacheExpiry: 15 * 60 * 1000 // 15 minutes cache for form
+            });
+
+            supabase = await keyManager.createSupabaseClient();
+            console.log('✅ Supabase connected with auto-fetched key');
+
+            supabaseInitialized = true;
+            return supabase;
+          }
+        } catch (keyManagerError) {
+          console.warn('⚠️ Key Manager failed, trying fallback:', keyManagerError.message);
+        }
+
+        // Fallback to old method
+        const storedUrl = localStorage.getItem('supabase_url') || 'https://fiaxrsiycswrwucthian.supabase.co';
         const storedKey = localStorage.getItem('supabase_anon_key');
 
         if (storedUrl && storedKey) {
           SUPABASE_CONFIG.url = storedUrl;
           SUPABASE_CONFIG.anonKey = storedKey;
-        }
-
-        if (SUPABASE_CONFIG.url && SUPABASE_CONFIG.anonKey) {
           supabase = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.anonKey);
-          console.log('✅ Supabase connected successfully');
+          console.log('✅ Supabase connected with stored key');
         } else {
-          console.log('⚠️ Supabase not configured, registration will only send email');
+          console.log('⚠️ No Supabase key available, registration will only send email');
         }
 
         supabaseInitialized = true;
