fix: add authenticate for user

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -2077,9 +2077,9 @@
       <span>Admin Panel</span>
     </div>
     <div class="mobile-header-actions">
-      <!-- <button id="adminAuthBtn" class="auth-btn" onclick="handleAuthAction()">
+      <button id="adminAuthBtn" class="auth-btn" onclick="handleAuthAction()">
         <span id="authBtnText">🔐 Đăng nhập</span>
-      </button> -->
+      </button>
       <button class="hamburger-btn" onclick="toggleMobileSidebar()">☰</button>
     </div>
   </div>
